--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "vue-authenticate",
-  "version": "1.4.1",
+  "name": "vue-auth",
+  "version": "0.0.1",
   "description": "Authentication library for Vue.js",
-  "main": "dist/vue-authenticate.min.js",
-  "module": "dist/vue-authenticate.es2015.js",
-  "unpkg": "dist/vue-authenticate.js",
+  "main": "dist/vue-auth.min.js",
+  "module": "dist/vue-auth.es2015.js",
+  "unpkg": "dist/vue-auth.js",
   "scripts": {
     "dev": "concurrently --kill-others \"node-dev ./example/server.js\" \"gulp dev\"",
-    "build": "node build/build.js && cp ./dist/vue-authenticate.js ./example/"
+    "build": "node build/build.js && cp ./dist/vue-auth.js ./example/"
   },
   "keywords": ["vue", "vue.js", "vuejs", "json", "jwt", "token", "auth", "authentication", "oauth", "oauth1", "oauth2"],
   "author": {
-    "name": "Davor Grubelic",
-    "email": "davor.grubelic@gmail.com",
-    "url": "https://dgrubelic.me"
+    "name": "Sek Chantouch",
+    "email": "chantouchsek.cs83@gmail.com",
+    "url": "https://bookingkh.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dgrubelic/vue-authenticate.git"
+    "url": "https://github.com/Chantouch/vue-auth.git"
   },
   "files": ["dist"],
   "license": "MIT",
@@ -49,8 +49,8 @@
     "uglify-js": "^2.8.22",
     "unix-timestamp": "^0.2.0",
     "vinyl-source-stream": "^1.1.0",
-    "vue-router": "^3.0.5",
-    "vuex": "^3.1.0",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.3",
     "webpack": "^4.30.0",
     "webpack-dev-server": "^3.3.1"
   },
@@ -77,10 +77,10 @@
     "oauth 2.0"
   ],
   "dependencies": {
-    "acorn": "^6.1.1",
-    "ajv": "^6.10.0",
-    "axios": "^0.18.0",
-    "vue": "^2.6.10",
-    "vue-axios": "^2.1.4"
+    "acorn": "^7.1.1",
+    "ajv": "^6.12.0",
+    "axios": "^0.19.2",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5"
   }
 }
