change module name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-auth",
+  "name": "@sct/vue-auth",
   "version": "0.0.1",
   "description": "Authentication library for Vue.js",
   "main": "dist/vue-auth.min.js",
