--- a/example/config.json
+++ b/example/config.json
@@ -13,8 +13,8 @@
       "clientSecret": ""
     },
     "twitter": {
-      "clientId": "",
-      "clientSecret": ""
+      "clientId": "UGhQBsrl1cSHhoL8w07DUWQZr",
+      "clientSecret": "WlpfB92MpyR6F0pP2h9dWEHYLgDUBgF6GoAtTOp7IakOqaZSFO"
     },
     "instagram": {
       "clientId": "",
