--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
     "dev": "concurrently --kill-others \"node-dev ./example/server.js\" \"gulp dev\"",
     "build": "node build/build.js && cp ./dist/vue-auth.js ./example/"
   },
-  "keywords": ["vue", "vue.js", "vuejs", "json", "jwt", "token", "auth", "authentication", "oauth", "oauth1", "oauth2"],
+  "keywords": [
+    "vue",
+    "vue.js",
+    "vuejs",
+    "json",
+    "jwt",
+    "token",
+    "auth",
+    "authentication",
+    "oauth",
+    "oauth1",
+    "oauth2"
+  ],
   "author": {
     "name": "Sek Chantouch",
     "email": "chantouchsek.cs83@gmail.com",
@@ -19,7 +31,9 @@
     "type": "git",
     "url": "https://github.com/Chantouch/vue-auth.git"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -35,11 +49,11 @@
     "gulp": "3.9.1",
     "gulp-connect": "^5.7.0",
     "gulp-webpack": "^1.5.0",
-    "node-dev": "^3.1.3",
+    "node-dev": "^4.0.0",
     "oauth": "^0.9.15",
-    "oauth-signature": "^1.3.1",
-    "request": "^2.81.0",
-    "rollup": "^0.41.6",
+    "oauth-signature": "^1.5.0",
+    "request": "^2.88.2",
+    "rollup": "^2.6.1",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.0.2",
